# High-Level-C

./: .gitignore  High-Level-C.cabal  LanguageCStuff.hs  Main.hs  README.md  haskell-linbox.cabal
HLCLib/: BUILDING  High-Level-C.cabal  LanguageCStuff.hs  Main.hs
HLCLib/HighLevelC/: BasicTypes.hs  CWriter.hs  HLC.hs  HLCCalls.hs  HLCTypes.hs  LangConstructs.hs  Operators.hs  PrimFunctions.hs  TypeSynonyms.hs  VarDecls.hs
HLCLib/Libraries/: Memory.hs
HLCLib/PostProcess/: Cleanup.hs  ObjectRewrite.hs  Printer.hs  SymbolRewrite.hs
HLCLib/Printer/: PostProcess.hs  Printer.hs
HLCLib/Quasi/: EscapeTypeDefs.hs  Parser.hs  QuasiTypes.hs  TypeParser.hs
HLCLib/Structures/: BasicStructures.hs
HLCLib/Types/: PrimeField.hs
HLCLib/Util/: Names.hs  THUtil.hs
HLCPreproc/: HLCPreproc.cabal  Main.hs
HLCPreproc/AST/: AST.hs
HLCPreproc/Parser/: Parser.hs
HLCPreproc/Printer/: Printer.hs
HighLevelC/: BasicTypes.hs  CWriter.hs  HLC.hs  HLCCalls.hs  HLCTypes.hs  LangConstructs.hs  PrimFunctions.hs  Scope.hs  Test.hs  Test2.hs  TestTH.hs  VarDecls.hs  test.hs
IntermediateLang/: ILTypes.hs
Monads/: Code.hs
Printer/: PostProcess.hs  Printer.hs
Quasi/: QuasiC.hs
Util/: CTypes.hs  Names.hs  THUtil.hs
src/: Test.hs
src/Language/HLC/HighLevelC/: BasicTypes.hs  CWriter.hs  HLC.hs  HLCCalls.hs  HLCTypes.hs  LangConstructs.hs  Operators.hs  PrimFunctions.hs  TypeSynonyms.hs  VarDecls.hs
src/Language/HLC/IntermediateLang/: ILTypes.hs
src/Language/HLC/Libraries/: Memory.hs  Vector.hs
src/Language/HLC/PostProcess/: Cleanup.hs  ObjectRewrite.hs  Printer.hs  SymbolRewrite.hs
src/Language/HLC/Quasi/: EscapeTypeDefs.hs  Parser.hs  QuasiC.hs  QuasiTypes.hs  TypeParser.hs
src/Language/HLC/Structures/: BasicStructures.hs
src/Language/HLC/Types/: PrimeField.hs
src/Language/HLC/Util/: Names.hs  THUtil.hs
